cc/trees/layer_tree_host_unittest_scroll.cc
@@ -9,6 +9,7 @@
 #include "base/memory/weak_ptr.h"
 #include "base/single_thread_task_runner.h"
 #include "base/threading/thread_task_runner_handle.h"
+#include "build/build_config.h"
 #include "cc/animation/animation_host.h"
 #include "cc/base/completion_event.h"
 #include "cc/input/main_thread_scrolling_reason.h"
@@ -2071,11 +2072,20 @@ class LayerTreeHostScrollTestPropertyTreeUpdate
 
 SINGLE_AND_MULTI_THREAD_TEST_F(LayerTreeHostScrollTestPropertyTreeUpdate);
 
-class LayerTreeHostScrollTestImplSideInvalidation
+// Disabled due to flakes/crashes on Linux TSan Tests and on
+// linux_chromium_asan_rel; see https://crbug.com/697652.
+#if defined(OS_LINUX)
+#define MAYBE_LayerTreeHostScrollTestImplSideInvalidation \
+  DISABLED_LayerTreeHostScrollTestImplSideInvalidation
+#else
+#define MAYBE_LayerTreeHostScrollTestImplSideInvalidation \
+  LayerTreeHostScrollTestImplSideInvalidation
+#endif
+class MAYBE_LayerTreeHostScrollTestImplSideInvalidation
     : public LayerTreeHostScrollTest {
   void BeginTest() override {
     layer_tree_host()->outer_viewport_scroll_layer()->set_did_scroll_callback(
-        base::Bind(&LayerTreeHostScrollTestImplSideInvalidation::
+        base::Bind(&MAYBE_LayerTreeHostScrollTestImplSideInvalidation::
                        DidScrollOuterViewport,
                    base::Unretained(this)));
     PostSetNeedsCommitToMainThread();
@@ -2088,7 +2098,7 @@ class LayerTreeHostScrollTestImplSideInvalidation
       CompletionEvent completion;
       task_runner_provider()->ImplThreadTaskRunner()->PostTask(
           FROM_HERE,
-          base::Bind(&LayerTreeHostScrollTestImplSideInvalidation::
+          base::Bind(&MAYBE_LayerTreeHostScrollTestImplSideInvalidation::
                          WaitForInvalidationOnImplThread,
                      base::Unretained(this), &completion));
       completion.Wait();
@@ -2239,7 +2249,7 @@ class LayerTreeHostScrollTestImplSideInvalidation
   int num_of_deltas_ = 0;
 };
 
-MULTI_THREAD_TEST_F(LayerTreeHostScrollTestImplSideInvalidation);
+MULTI_THREAD_TEST_F(MAYBE_LayerTreeHostScrollTestImplSideInvalidation);
 
 }  // namespace
 }  // namespace cc
